Fix footer center alignment issues

--- a/challenge2/assets/css/stylesheet.css
+++ b/challenge2/assets/css/stylesheet.css
@@ -93,6 +93,7 @@ footer {
     margin-bottom: 1em;
     margin-top: 1em;
     padding-left: 0;
+    text-align: center;
 }
 
 .footer-links__item {
